REFACTORED: to solve the pinning issue by z-index

--- a/src/Scss/_notes.scss
+++ b/src/Scss/_notes.scss
@@ -121,6 +121,7 @@
 .pin-button{
     position: absolute !important;
     right: 0%;
+    z-index: 2;
     display: none !important;
 }
 
